# azur-minecraft-manager

./: .gitignore  Draft.md  LICENSE  bun.lockb  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
.github/workflows/: main.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  amcm.json  tauri.conf.json
src-tauri/src/: amcm.rs  api.rs  cmd.rs  config.rs  file.rs  json.rs  main.rs  mcmod.rs  modloader.rs  modrinth.rs
src-tauri/src/amcm/: cache.rs  cache_test.rs  config.rs  core.rs  data.rs  data_test.rs  database.rs  mod.rs  target.rs
src-tauri/src/amcm/migrator/: mod.rs
src-tauri/src/amcm/structures/: mod.rs  mod_file.rs  mod_source.rs  mods_json.rs
src-tauri/src/api/: mcmod.rs  target.rs
src-tauri/src/cmd/: mcmod.rs  mod.rs  mod_file.rs  mod_source.rs  mod_source_test.rs  project.rs  target.rs  version.rs
src-tauri/src/test/: mod.rs
src-tauri/src/utils/: file.rs  file_test.rs  mod.rs
src/lib/: ModalAddTarget.svelte  PathInput.svelte  api.ts  config.ts  stores.ts  typing.ts
src/lib/apis/: api.ts  mod_file.ts  project.ts  target.ts  version.ts
src/lib/components/: CardModFile.svelte  CardTarget.svelte  Greet.svelte  LocalModFileCard.svelte  ModSourceCard.svelte  ModVersionCard.svelte  ModVersionModal.svelte  ModalAddTarget.svelte  PathInput.svelte  RemoteModCard.svelte  Toggle.svelte
src/lib/typing/: typing.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/main/: +layout.svelte  +page.svelte
src/routes/main/resources/: +page.svelte
src/routes/manage/: +page.svelte
src/routes/manage/[id]/: +page.svelte  +page.ts
src/routes/resources/: +page.svelte
src/routes/settings/: +page.svelte
