[package]
name = "azur-minecraft-manager"
version = "0.0.0"
description = "A Minecraft Manager"
authors = ["AzurIce"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "path-all", "shell-open"] }
lazy_static = "1.4.0"
once_cell = "1.16.0"
zip = "0.6.3"
sha = "1.0.3"
ferinth = "2"
jasondb = "0.2.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
